--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "lws-json-server-todos",
   "description": "Example in memory todos api with json-server by Learn with Sumit",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "Learn with Sumit",
